2009-11-25	Vladlen Y. Koshelev

	* main/OQL/Parsers/OqlGroupByParser.class.php: added support for logical,
	arithmetic and bindable expressions in group by clause.

2009-11-10	Denis M. Gabaidulin

	* main/DAOs/Workers/CustomDataScopedWorker.class.php: added worker
	to cache/uncache some scoped(by class, e.g.) data.

2009-11-05	Denis M. Gabaidulin

	* main/Base/StandardComparator.class.php: added.

2009-10-23	Denis M. Gabaidulin

	* main/Application/SimpleApplicationUrl.class.php: very simple,
	but much more lightweight and faster version of app url. It could be used
	with already validated urls.

2009-10-23	Sergey S. Sergeev

	* main/DAOs/ProtoDAO.class.php: fixed resolve path for ValueObjects.

	* meta/builders/AutoProtoClassBuilder.class.php,
	meta/classes/MetaClassProperty.class.php: ValueObject supports inheritance now.

	* meta/classes/MetaConfiguration.class.php: fixed check recursion for lazy objects.

2009-10-19	Denis M. Gabaidulin

	* core/Cache/DebugCachePeer.class.php: cache peer for debugging
	and logging purposes.

2009-09-22	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveEnumerationByValue.class.php: added
	to manage with enums by the value instead id. Typical usage: every element
	in Enumeration has input[type=submit] representation in html.

2009-09-17	Denis M. Gabaidulin

	* misc/autload.classPathCache.inc.php, misc/autload.wholeClassCache.inc.php:
	added ONPHP_VERSION to checksum hash.

2009-09-17	Vladimir A. Altuchov

	* misc/autoload.classPathCache.inc.php,
	misc/autoload.wholeClassCache.inc.php: added handling for inconsistent
	glob() behaviour.

2009-09-17	Viatcheslav Y. Tsyrulnik

	* meta/classes/MetaClassProperty.class.php: fixed support for
	identifiers of string type.

2009-09-13	Konstantin V. Arkhipov

	* 1.0.9 released.

2009-09-08	Denis M. Gabaidulin

	* main/Utils/Mobile/MobileUtils.class.php: extract ip/user agent
	from headers wrt Opera mini.

2009-09-04	Denis M. Gabaidulin
